--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ RoxygenNote: 7.2.1
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    tibble
 Imports: 
     ctrlGene,
     ggplot2,
