Addition of support for loading from ods files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(rs_genorm)
 export(rs_graph)
 export(rs_loadcsvdata)
 export(rs_loadexceldata)
+export(rs_loadodsdata)
 export(rs_loadtxtdata)
 export(rs_normfinder)
 export(rs_reffinder)
@@ -25,6 +26,7 @@ export(rsorderbystability)
 export(rsoutdirselect)
 import(ggplot2)
 import(openxlsx)
+import(readODS)
 import(readxl)
 import(tcltk)
 importFrom(data.table,fread)
