--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,8 @@ Imports:
     reshape2,
     readxl,
     openxlsx,
-    data.table
+    data.table,
+    readODS
 Depends: 
     R (>= 2.10)
 VignetteBuilder: knitr
