Data format check on loading data
Tests for format chacks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(rs_loadexceldata)
 export(rs_loadodsdata)
 export(rs_loadtxtdata)
 export(rs_normfinder)
+export(rs_normfinderFull)
 export(rs_reffinder)
 export(rsaddstabilityrank)
 export(rsadjustnmfRounding)
