--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(rs_deltaCt)
 export(rs_exceltable)
 export(rs_genorm)
 export(rs_graph)
+export(rs_load.table)
 export(rs_loadcsvdata)
 export(rs_loadexceldata)
 export(rs_loadodsdata)
@@ -31,6 +32,5 @@ import(openxlsx)
 import(readODS)
 import(readxl)
 import(tcltk)
-importFrom(data.table,fread)
 importFrom(ggplot2,ggplot)
 importFrom(reshape2,melt)
