--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,10 @@
 export(rs_batchExcel)
 export(rs_batchExcel2)
 export(rs_batchExcel3)
-export(rs_bestKeeper)
-export(rs_bestKeeperFull)
+export(rs_bestkeeper)
+export(rs_bestkeeperFull)
 export(rs_csvbatch)
-export(rs_deltaCt)
+export(rs_deltact)
 export(rs_exceltable)
 export(rs_genorm)
 export(rs_graph)
@@ -18,8 +18,10 @@ export(rs_loadtxtdata)
 export(rs_normfinder)
 export(rs_normfinderFull)
 export(rs_reffinder)
+export(rs_wizzard)
 export(rsaddstabilityrank)
 export(rsadjustnmfRounding)
+export(rsdialog)
 export(rsexcelfile)
 export(rsexltypeselect)
 export(rsfinder)
