--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ export(rs_loadtxtdata)
 export(rs_normfinder)
 export(rs_normfinderFull)
 export(rs_reffinder)
-export(rs_wizzard)
+export(rs_wizard)
 export(rsaddstabilityrank)
 export(rsadjustnmfRounding)
 export(rsdialog)
