Add automatic control to graph width/Height to make sure data names (Fresh Frozen) is contained in the facet box. - DONE  - run 5 miRNA with Fresh frozen horizontal to see problem  - maybe find a maximum "width" for capitalized longest name e.g. Fresh frozen -> FRESH FROZEN. set height to this + a bit if orientation i horizontal
rename rs_loadtable and rs_loadspreadsheet - remove "_" - DONE
################################
rs_wizard do not make graph horizontal for png tiff jpeg - SOLVED

Add message of path to files created tables for doctables - DONE

rs_wizard now supports preselected inputs.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.9.6
 Author: Patrick H.D. Petersen
 Maintainer: Patrick H.D. Petersen <dalsbo83@gmail.com>
 Description: Simple calculation and extraction of expression stablity and stablity ranking based on the RefFinder method.
-License: MIT + file LICENSE
+License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.1
@@ -24,8 +24,10 @@ Imports:
     openxlsx,
     data.table,
     tcltk,
-    readODS
+    readODS,
+    flextable,
+    officer
 Depends: 
-    R (>= 2.10)
+    R (>= 4.0)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
