--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,32 +8,38 @@ export(rs_exceltable)
 export(rs_exporttable)
 export(rs_genorm)
 export(rs_graph)
-export(rs_load.table)
-export(rs_loadcsvdata)
 export(rs_loaddata)
-export(rs_loadtxtdata)
 export(rs_normfinder)
 export(rs_normfinderFull)
-export(rs_odstable)
 export(rs_reffinder)
 export(rs_wizard)
 export(rsaddstabilityrank)
 export(rsadjustnmfRounding)
 export(rscsvtable)
 export(rsdialog)
+export(rsdoctable)
+export(rsdoctable1)
+export(rsdoctable2)
 export(rsexcelfile)
 export(rsexltypeselect)
 export(rsfinder)
 export(rsgraphdraw)
 export(rsgraphtypeselect)
+export(rsodstable)
 export(rsorderbystability)
 export(rsoutdirselect)
 export(rstsvtable)
 export(rstxttable)
+import(flextable)
 import(ggplot2)
 import(openxlsx)
 import(readODS)
 import(readxl)
 import(tcltk)
 importFrom(ggplot2,ggplot)
+importFrom(officer,fp_border)
+importFrom(officer,fp_par)
+importFrom(officer,page_mar)
+importFrom(officer,page_size)
+importFrom(officer,prop_section)
 importFrom(reshape2,melt)
