Small update to version General maintanance

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(rs_bestkeeper)
 export(rs_bestkeeperFull)
+export(rs_cite)
 export(rs_deltact)
 export(rs_exceltable)
 export(rs_exporttable)
